# cmake-docs-l10n-draft6

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.ja_JP.md  README.md  README.ru_RU.md  README.zh_CN.md  README.zh_TW.md  configure.cmake  matrix.json  mutex_queue  script.sh  versions.json
.github/: FUNDING.yml
.github/workflows/: ci-check-pr-status.yml  ci-crowdin-contributor.yml  ci-crowdin-document.yml  ci-crowdin-download-po.yml  ci-crowdin-upload-pot.yml  ci-deploy-gh-pages.yml  ci-deploy-po-version.yml  ci-dispatch-pr-merged.yml  ci-gettext-compend-po.yml  ci-gettext-statistic-po.yml  ci-gettext-update-po.yml  ci-sphinx-update-pot.yml  ci-tms-download-po.yml  ci-tms-update-readme.yml  ci-tms-upload-pot.yml  ci-tmscli-download-po.yml  ci-tmscli-update-readme.yml  ci-tmscli-upload-pot.yml  ci-update-submodule.yml  ci-update-submodules.yml  matrix.json  test2.yml  tests.yml  use-crowdin-document.yml  use-crowdin-download-po.yml  use-crowdin-upload-pot.yml  use-deploy-gh-pages.yml  use-deploy-po-version.yml  use-gettext-compend-po.yml  use-gettext-statistic-po.yml  use-gettext-update-po.yml  use-sphinx-update-pot.yml  use-tms-download-po.yml  use-tms-update-readme.yml  use-tms-upload-pot.yml  use-tmscli-download-po.yml  use-tmscli-update-readme.yml  use-tmscli-upload-pot.yml  use-update-submodule.yml  use-update-submodules.yml  (+1 more)
cmake/: configure.cmake
cmake/modules/: GitUtils.cmake
cmake/scripts/: conda_requirements.cmake  crowdin_download_po.cmake  crowdin_upload_pot.cmake  gettext_compend_po.cmake  gettext_statistic_po.cmake  gettext_update_po.cmake  install_requirements.cmake  prepare_git_repo.cmake  prepare_repositories.cmake  readthedocs_symlinks.cmake  sphinx_build_docs.cmake  sphinx_update_pot.cmake
cmake/templates/: crowdin.yml.in
docs/: ACKNOWLEDGEMENTS.md  ACKNOWLEDGEMENTS.ru_RU.md  CONTRIBUTING.ja_JP.md  CONTRIBUTING.md  CROWDIN_CONTRIBUTORS.md  MAINTAINING.md  MAINTAINING.ru_RU.md
git-master/: reference.json  references.json  statistic.txt
ja_JP/: version_switch.js
ja_JP/LC_MESSAGES/: index.po  sphinx.po
ja_JP/git-master/: genindex.html  index.html  search.html  searchindex.js
ja_JP/latest/: genindex.html  index.html  search.html  searchindex.js
ja_JP/v3.0/: genindex.html  index.html  search.html
ja_JP/v3.1/: genindex.html  index.html  search.html
ja_JP/v3.10/: genindex.html  index.html  search.html
ja_JP/v3.11/: genindex.html  index.html  search.html
ja_JP/v3.12/: genindex.html  index.html  search.html
ja_JP/v3.13/: genindex.html  index.html  search.html
ja_JP/v3.14/: genindex.html  index.html  search.html
ja_JP/v3.15/: genindex.html  index.html  search.html
ja_JP/v3.16/: genindex.html  index.html  search.html
ja_JP/v3.17/: genindex.html  index.html  search.html
ja_JP/v3.18/: genindex.html  index.html  search.html
ja_JP/v3.19/: genindex.html  index.html  search.html  searchindex.js
ja_JP/v3.2/: genindex.html  index.html  search.html
ja_JP/v3.20/: genindex.html  index.html  search.html  searchindex.js
ja_JP/v3.21/: genindex.html  index.html  search.html  searchindex.js
ja_JP/v3.26/: genindex.html  searchindex.js
ja_JP/v3.27/: genindex.html  searchindex.js
ja_JP/v3.28/: genindex.html  searchindex.js
ja_JP/v3.29/: genindex.html  index.html  search.html  searchindex.js
ja_JP/v3.3/: genindex.html  index.html  search.html
ja_JP/v3.30/: genindex.html  index.html  search.html  searchindex.js
ja_JP/v3.4/: genindex.html  index.html  search.html
ja_JP/v3.5/: genindex.html  index.html  search.html
ja_JP/v3.6/: genindex.html  index.html  search.html
ja_JP/v3.7/: genindex.html  index.html  search.html
ja_JP/v3.8/: genindex.html  index.html  search.html
ja_JP/v3.9/: genindex.html  index.html  search.html
latest/: reference.json  references.json  statistic.txt
requirements/: sphinx-1.6.1.txt  sphinx-1.6.7.txt  sphinx-2.4.5.txt  sphinx-5.3.0.txt  sphinx-6.2.1.txt  sphinx-latest.txt
ru_RU/: version_switch.js
ru_RU/LC_MESSAGES/: index.po  sphinx.po
ru_RU/git-master/: genindex.html  index.html  search.html  searchindex.js
ru_RU/latest/: genindex.html  index.html  search.html  searchindex.js
ru_RU/v3.0/: genindex.html  index.html  search.html
ru_RU/v3.1/: genindex.html  index.html  search.html
ru_RU/v3.10/: genindex.html  index.html  search.html
ru_RU/v3.11/: genindex.html  index.html  search.html
ru_RU/v3.12/: genindex.html  index.html  search.html
ru_RU/v3.13/: genindex.html  index.html  search.html
ru_RU/v3.14/: genindex.html  index.html  search.html
ru_RU/v3.15/: genindex.html  index.html  search.html
ru_RU/v3.16/: genindex.html  index.html  search.html
ru_RU/v3.17/: genindex.html  index.html  search.html
ru_RU/v3.18/: genindex.html  index.html  search.html
ru_RU/v3.19/: genindex.html  index.html  search.html  searchindex.js
ru_RU/v3.2/: genindex.html  index.html  search.html
ru_RU/v3.20/: genindex.html  index.html  search.html  searchindex.js
ru_RU/v3.21/: genindex.html  index.html  search.html  searchindex.js
ru_RU/v3.26/: genindex.html  searchindex.js
ru_RU/v3.27/: genindex.html  searchindex.js
ru_RU/v3.28/: genindex.html  searchindex.js
ru_RU/v3.29/: genindex.html  index.html  search.html  searchindex.js
v3.0/: statistic.txt
v3.1/: statistic.txt
v3.10/: statistic.txt
v3.11/: statistic.txt
v3.12/: statistic.txt
v3.13/: references.json  statistic.txt
v3.14/: statistic.txt
v3.15/: statistic.txt
v3.16/: statistic.txt
v3.17/: statistic.txt
v3.18/: statistic.txt
v3.19/: statistic.txt
v3.2/: statistic.txt
v3.20/: statistic.txt
v3.21/: statistic.txt
v3.22/: statistic.txt
v3.23/: statistic.txt
v3.24/: statistic.txt
v3.25/: statistic.txt
v3.26/: statistic.txt
v3.27/: statistic.txt
v3.28/: statistic.txt
v3.29/: reference.json  references.json  statistic.txt
v3.3/: statistic.txt
v3.30/: references.json  statistic.txt
v3.4/: statistic.txt
v3.5/: statistic.txt
v3.6/: statistic.txt
v3.7/: statistic.txt
v3.8/: statistic.txt
v3.9/: statistic.txt
zh_CN/: version_switch.js
zh_TW/: version_switch.js
(+356562 files in other folders)
